--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=com.weatherapp
+api.security.token.secret=com.weatherapp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/weatherapp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
