--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ api.security.token.secret=com.weatherapp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/weatherapp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=toor
 
 # Configuração do JPA
 spring.jpa.hibernate.ddl-auto=update
